--- a/tarningsspel.html
+++ b/tarningsspel.html
@@ -17,13 +17,13 @@
             <a class="nav-link" href="#">Start</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <!-- <a class="nav-link" href="#">About</a> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <!-- <a class="nav-link" href="#">Services</a> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <!-- <a class="nav-link" href="#">Contact</a> -->
           </li>
         </ul>
       </nav> 
